Change JS code and add background image

--- a/css/style.less
+++ b/css/style.less
@@ -1,80 +1,71 @@
 * {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
 }
-
 body {
-    background-color: rgb(156, 218, 218);
-}
-
-main {
-    display: grid;
-    place-items: center;
-    margin-top: 100px;
-
-    .block_container {
-        border: 1px solid black;
-        padding: 20px;
+    background-image: url(https://www.pixelstalk.net/wp-content/uploads/2016/07/Download-Free-Weather-Background-768x432.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    main {
+        display: grid;
+        place-items: center;
+        margin-top: 100px;
+        .container_block {
+            background-color: rgba(0, 0, 0, 0.218);
+            box-shadow: rgba(0, 0, 0, 0.863) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            button {
+                margin-top: 20px;
+                width: 100%;
+                padding: 10px;
+                cursor: pointer;
+                border: none;
+                border-radius: 10px;
+                &:hover {
+                    transition: 3s;
+                    background-color: rgb(24, 63, 136);
+                }
+            }
+         border: 2px solid black;
+         padding: 40px;
         border-radius: 20px;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        button {
-            margin-top: 20px;
-            padding: 5px;
-            width: 100%;
-            border: none;
-            cursor: pointer;
-            border-radius: 10px;
-            &:hover {
-                transition: 3s;
-                background-color: rgb(24, 63, 136);
+        .main_section {
+            padding: 40px;
+            .correct {
+                margin-top: 20px;
+                background-color: green;
+                color: white;
+                margin-bottom: 10px;
+                border-radius: 5px ;
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            }
+            .incorrect {
+                margin-top: 20px;
+                background-color: red;
+                color: white;
+                margin-bottom: 10px;
+                border-radius: 5px ;
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
             }
         }
-
-        hr {
-            margin-top: 20px;
+        .second_section {
+            text-align: center;
+            padding-top: 20px;
+            p {
+                font-size: 20px;
+            }
+            input {
+                margin-top: 20px;
+                padding: 8px 16px;
+                border: none;
+                border-radius: 10px;
+                cursor: context-menu;
+            }
         }
+      }
     }
-
-    .main_section {
-        padding: 40px;
-
-        .correct {
-            background-color: green;
-            color: aliceblue;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        }
-        .incorrect {
-            background-color: red;
-            color: white;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        }
+    hr {
+        width: 80%;
+        margin-top: 40px;
+        color: black;
     }
-
-    .second_section {
-        text-align: center;
-        padding-top:20px;
-
-        input {
-            margin-top: 20px;
-            padding: 10px;
-            border-radius: 20px;
-            cursor: context-menu;
-        } 
-
-        p {
-            color: rgb(98, 107, 123);
-            font-size: 20px;
-        }
-    }
-
-    h2 {
-        color: rgb(98, 107, 123);
-    }
-    
 }
-
-
