--- a/css/style.css
+++ b/css/style.css
@@ -3,65 +3,69 @@
   padding: 0;
 }
 body {
-  background-color: #9cdada;
+  background-image: url(https://www.pixelstalk.net/wp-content/uploads/2016/07/Download-Free-Weather-Background-768x432.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-main {
+body main {
   display: grid;
   place-items: center;
   margin-top: 100px;
 }
-main .block_container {
-  border: 1px solid black;
-  padding: 20px;
+body main .container_block {
+  background-color: rgba(0, 0, 0, 0.218);
+  box-shadow: rgba(0, 0, 0, 0.863) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border: 2px solid black;
+  padding: 40px;
   border-radius: 20px;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-main .block_container button {
+body main .container_block button {
   margin-top: 20px;
-  padding: 5px;
   width: 100%;
-  border: none;
+  padding: 10px;
   cursor: pointer;
+  border: none;
   border-radius: 10px;
 }
-main .block_container button:hover {
+body main .container_block button:hover {
   transition: 3s;
   background-color: #183f88;
 }
-main .block_container hr {
-  margin-top: 20px;
-}
-main .main_section {
+body main .container_block .main_section {
   padding: 40px;
 }
-main .main_section .correct {
+body main .container_block .main_section .correct {
+  margin-top: 20px;
   background-color: green;
-  color: aliceblue;
+  color: white;
   margin-bottom: 10px;
-  border-radius: 5px;
+  border-radius: 5px ;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-main .main_section .incorrect {
+body main .container_block .main_section .incorrect {
+  margin-top: 20px;
   background-color: red;
   color: white;
   margin-bottom: 10px;
-  border-radius: 5px;
+  border-radius: 5px ;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-main .second_section {
+body main .container_block .second_section {
   text-align: center;
   padding-top: 20px;
 }
-main .second_section input {
-  margin-top: 20px;
-  padding: 10px;
-  border-radius: 20px;
-  cursor: context-menu;
-}
-main .second_section p {
-  color: #626b7b;
+body main .container_block .second_section p {
   font-size: 20px;
 }
-main h2 {
-  color: #626b7b;
+body main .container_block .second_section input {
+  margin-top: 20px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 10px;
+  cursor: context-menu;
+}
+body hr {
+  width: 80%;
+  margin-top: 40px;
+  color: black;
 }
